--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -52,3 +52,5 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+        with:
+          SERVER_URL: ${{ secrets.SERVER_URL }}
